src/objects/Portal_Content__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Portal_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Portal Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Portal Contents</relationshipLabel>
        <relationshipName>Portal_Contents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Promo_Text__c</fullName>
        <label>Promo Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Portal Content</label>
    <nameField>
        <displayFormat>PC-{0000}</displayFormat>
        <label>Portal Content Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Portal Contents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>